<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TravelVIPER</string>
    <string name="home" tools:ignore="ExtraTranslation">Home</string>
    <string name="star">star</string>
    <string name="favourite">favourite</string>
    <string name="cost">cost</string>
    <string name="search">search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tour_title">Find the best tour</string>
    <string name="country">Country</string>
    <string name="popular_tour">Popular Tour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_wifi"> Free \nWi-Fi</string>
    <string name="sand_beach"> Sand \nBeach</string>
    <string name="coastline"> First\nCoastline </string>
    <string name="bar"> Bar and \nRestaurant \t</string>
    <string name="news">New</string>
    <string name="thailand">Thailand</string>
    <string name="tv_quality">10 nights for two</string>
    <string name="price">$ 245.50</string>
</resources>
