<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPopularTourTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_start"
        android:fontFamily="sans-serif-medium"
        android:text="@string/popular_tour"
        android:textColor="#577068"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/rvCountry" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:clipToPadding="false"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPopularTourTitle">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCountryImage"
                android:layout_width="@dimen/imv_size"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/thailand"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCountryName"
                android:layout_width="@dimen/tv"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_small"
                android:ems="2"
                android:fontFamily="sans-serif-condensed-medium"
                android:singleLine="true"
                android:text="Thailand"
                android:textSize="@dimen/text_view"
                app:layout_constraintStart_toEndOf="@+id/ivCountryImage"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTourCount"
                android:layout_width="@dimen/tv_tv"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/tv_quality"
                app:layout_constraintStart_toStartOf="@+id/tvCountryName"
                app:layout_constraintTop_toBottomOf="@+id/tvCountryName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRates"
                android:layout_width="@dimen/thirty"
                android:layout_height="@dimen/seventy"
                android:layout_marginEnd="@dimen/margin_start"
                android:background="@drawable/round_text_view_tour"
                android:drawableBottom="@drawable/ic_star_black_24dp"
                android:gravity="center"
                android:paddingStart="@dimen/margin_small"
                android:paddingTop="@dimen/six"
                android:paddingEnd="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_start"
                android:text=""
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/ivCountryImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivCountryImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrice"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/price"
                android:textSize="@dimen/text_view"
                app:layout_constraintStart_toStartOf="@+id/tvCountryName"
                app:layout_constraintTop_toBottomOf="@+id/tvTourCount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>