<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/country"
        android:textColor="#577068"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:clipToPadding="false"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCountry">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCountryImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/thailand"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNew"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_start"
                android:background="@drawable/round_text_view"
                android:gravity="center"
                android:text="@string/news"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCountryName"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_start"
                android:layout_marginBottom="@dimen/margin_top"
                android:ems="2"
                android:singleLine="true"
                android:text="@string/thailand"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_sizes"
                app:layout_constraintBottom_toTopOf="@+id/tvTourCount"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTourCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_start"
                android:layout_marginBottom="@dimen/margin_start"
                android:text="18 Tours"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_sizes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRate"
                android:layout_width="@dimen/fourty"
                android:layout_height="@dimen/ninty"
                android:background="@drawable/round_text_view"
                android:drawableBottom="@drawable/ic_star_black_24dp"
                android:gravity="center"
                android:paddingStart="@dimen/margin_top"
                android:paddingTop="24dp"
                android:paddingEnd="@dimen/margin_top"
                android:paddingBottom="@dimen/margin_start"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tv_rate"
                app:layout_constraintBottom_toBottomOf="@+id/tvTourCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvCountryName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>